# libviprs-tests

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TESTS_PLAN.md  run-tests.sh
.github/workflows/: ci.yml
tests/: blank_tile_strategy.rs  blueprint_mix_pyramid.rs  blueprint_portrait_pyramid.rs  fixture_audit.rs  gen_blank_tile_fixtures.rs  gen_source_rasters.rs  google_centre_pyramid.rs  no_temp_files.rs  observability.rs  pdf_cmyk.rs  pdf_ops.rs  pdf_to_pyramid.rs  pdfium_integration.rs  pdfium_system_check.rs  ported_arithmetic.rs  ported_colour.rs  ported_connection.rs  ported_conversion.rs  ported_convolution.rs  ported_create.rs  ported_draw.rs  ported_foreign.rs  ported_histogram.rs  ported_infrastructure.rs  ported_iofuncs.rs  ported_morphology.rs  ported_mosaicing.rs  ported_resample.rs  pyramid_determinism.rs  pyramid_fs_sink.rs  streaming_engine.rs  stress.rs
tests/fixtures/: README.md  blueprint_mix_expected.dzi  blueprint_mix_rendered_expected.dzi  blueprint_portrait_expected.dzi  blueprint_portrait_rendered_expected.dzi  gen_google_centre_fixtures.sh
tests/fixtures/blueprint_google_centre/: vips-properties.xml
tests/fixtures/blueprint_mix_expected/: vips-properties.xml
tests/fixtures/blueprint_mix_google_centre/: vips-properties.xml
tests/fixtures/blueprint_mix_rendered_expected/: vips-properties.xml
tests/fixtures/blueprint_portrait_expected/: vips-properties.xml
tests/fixtures/blueprint_portrait_google_centre/: vips-properties.xml
tools/: Dockerfile  entrypoint.sh  gen_fixtures.sh  install-hooks.sh  run-tests.sh
(+20 files in other folders)
